--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -7,12 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Website</title>
     <link rel="stylesheet" href="./styles.css">
-    <link rel="icon" href="" type="image/x-icon">
 </head>
 
 <body>
+    <header>
+        <header class="header">
+            <h1>Life Below Water</h1>
+        </header>
+        <div class="bubble" id="bubble-1"></div>
+        <div class="bubble" id="bubble-2"></div>
+        <div class="bubble" id="bubble-3"></div>
+        <div class="bubble" id="bubble-4"></div>
+        <div class="bubble" id="bubble-5"></div>
+    </header>
+    
     <main>
-        <h1>Welcome to My Website</h1>
+
     </main>
     <script src="index.js"></script>
 </body>
