--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <header class="header">
-            <h1>Life Below Water</h1>
+            <h1>Save the Oceans</h1>
         </header>
         <div class="bubble" id="bubble-1"></div>
         <div class="bubble" id="bubble-2"></div>
