--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Website</title>
+    <title>Life Below Water</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
     <header>
         <header class="header">
-            <h1>Save the Oceans</h1>
+            <h1>Life Below Water</h1>
         </header>
         <div class="bubble" id="bubble-1"></div>
         <div class="bubble" id="bubble-2"></div>
@@ -22,8 +22,13 @@
     
     <main>
 
-    </main>
-    <script src="index.js"></script>
+        <script src="bubbles.js"></script>
+        <script src="index.js"></script>
+    </div>
+
+
+</body>
+
 </body>
 
 </html>
