--- a/index.html
+++ b/index.html
@@ -9,18 +9,74 @@
 </head>
 
 <body>
-    <header>
-        <header class="header">
-            <h1>Life Below Water</h1>
-        </header>
-        <div class="bubble" id="bubble-1"></div>
-        <div class="bubble" id="bubble-2"></div>
-        <div class="bubble" id="bubble-3"></div>
-        <div class="bubble" id="bubble-4"></div>
-        <div class="bubble" id="bubble-5"></div>
-    </header>
-    
-    <main>
+    <div class="main" id="main">
+
+        <div class="header">
+            <div style="width:60%; display:flex; flex-direction: column;">
+                <h1>Life Below Water</h1>
+                <h2>Conserve and sustainably use the oceans, seas and marine resources for sustainable development.</h2>
+            </div>
+            <div class="nav-placeholder">
+                <ul class="nav-container">
+                    <li id="nav_content">Events</li>
+                    <li>Research</li>
+                    <li>Events</li>
+                </ul>
+            </div>
+            <div class="bubble" id="bubble-1"></div>
+            <div class="bubble" id="bubble-2"></div>
+            <div class="bubble" id="bubble-3"></div>
+            <div class="bubble" id="bubble-4"></div>
+            <div class="bubble" id="bubble-5"></div>
+        </div>
+
+        <div id="content">
+            <div id="events">
+                <h2>Upcoming Events</h2>
+
+                <div class="event-container">
+                    <div class="event">
+                        <span class="circle"></span>
+                        <div class="name">
+                            Robert Jay Band
+                        </div>
+                        <div class="time">
+                            23:00
+                        </div>
+                    </div>
+                    <div class="event">
+                        <span class="circle"></span>
+                        <div class="name">
+                            Ruige Rita's
+                        </div>
+                        <div class="time">
+                            23:00
+                        </div>
+                    </div>
+                    <div class="event">
+                        <span class="circle"></span>
+                        <div class="name">
+                            Ms. Jones
+                        </div>
+                        <div class="time">
+                            23:00
+                        </div>
+                    </div>
+                    <div class="event">
+                        <span class="circle"></span>
+                        <div class="name">
+                            Adwaith
+                        </div>
+                        <div class="time">
+                            23:00
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="scroll-top-container"></div>
 
         <script src="bubbles.js"></script>
         <script src="index.js"></script>
