--- a/problem_information.html
+++ b/problem_information.html
@@ -19,7 +19,7 @@ form--> with a link to the event. Besides an agenda, you'll find information on 
 publications in the field of sustainable use, regeneration and other problems surrounding oceans. 
 </p>
 
-<h2>The biggest challenges we face in respect to oceans are:</h2> <br>
+<h2>Click on the subjects below to learn more about the challenges our oceans currently face</h2> <br>
 <!--Klikken op onderstaande woorden zorgt ervoor dat de paragraaf die erbij hoort uitvouwt-->
 
 <h3>Plastic pollution</h3>
@@ -36,7 +36,7 @@ The complete dangers of microplastics are still unknown, but it is clear that th
 into our food and water supplies, and eventually into our bodies.</p> <br>
 
 <h3>Our sources and more information on plastic pollution</h3>
-
+<!--De bronnen zijn standaard verborgen maar worden zichtbaar door hierop te klikken-->
 <p>
 https://www.iucn.org/resources/issues-brief/marine-plastic-pollution <br>
 https://www.nationalgeographic.com/environment/article/microplastics-are-in-our-bodies-how-much-do-they-harm-us <br>
@@ -100,9 +100,32 @@ https://oceantoday.noaa.gov/deadzonegulf-2021/welcome.html <br>
 
 <h3>Acidification</h3>
 
+<p>
+A quarter of annual carbon emissions are absorbed by the ocean. This reduces the immediate impact of
+climate change. However, it also causes the ocean to increase in acidity. This poses a danger to
+marine ecosystems, fisheries, and coastal protection due to reduction of coral reefs. It is
+projected that acidification will increase in coming years. This is not only problematic due to the
+aforementioned reasons, it also reduces the ocean's ability to absord carbon emissions in the
+future, thereby worsening climate change.</p>
 
+<h3>Our sources and more information on acidification</h3>
+
+<p>https://sustainabledevelopment.un.org/content/documents/5844Ocean%20acidification.pdf</p>
 
 <h3>Overfishing</h3>
 
+<p>
+Overfishing has the obvious consequence of reducing population levels of marine life, thereby 
+threatening overfished species with extinction. This threatens food supplies and entire marine
+ecosystems. Another consequence is that overfishing impacts the ability the ocean has to store
+carbon, which is a crucial part of climate change mitigation (as mentioned in the 'rising
+temperatures' section). 
+</p>
+
+<h3>Our sources and more information on overfishing</h3>
+
+<p>
+https://unfccc.int/blog/plenty-of-fish <br>
+https://www.iaea.org/topics/oceans-and-climate-change/the-ocean-carbon-cycle <br>
+</p>
 </body>
- 
