--- a/index.html
+++ b/index.html
@@ -11,23 +11,25 @@
 <body>
     <div class="main" id="main">
 
-        <div class="header">
+        <div class="header" id="header">
             <div style="width:60%; display:flex; flex-direction: column;">
                 <h1>Life Below Water</h1>
                 <h2>Conserve and sustainably use the oceans, seas and marine resources for sustainable development.</h2>
             </div>
             <div class="nav-placeholder">
+                <div class="login-placeholder">
+                    <div class="login-container">
+                        <i class="gg-user"></i>
+                        Inloggen
+                    </div>
+                    <a class='link' href="www.youtube.com">Nieuw account maken</a>
+                </div>
                 <ul class="nav-container">
-                    <li id="nav_content">Events</li>
-                    <li>Research</li>
-                    <li>Events</li>
+                    <li>Our Goal</li>
+                    <li id="nav_content">Upcoming Events</li>
+                    <li id="nav_content">Community</li>
                 </ul>
             </div>
-            <div class="bubble" id="bubble-1"></div>
-            <div class="bubble" id="bubble-2"></div>
-            <div class="bubble" id="bubble-3"></div>
-            <div class="bubble" id="bubble-4"></div>
-            <div class="bubble" id="bubble-5"></div>
         </div>
 
         <div id="content">
@@ -78,7 +80,8 @@
 
         <div class="scroll-top-container"></div>
 
-        <script src="bubbles.js"></script>
+        <!-- <script src="bubbles.js"></script> -->
+        <script src="bubbles_temp.js"></script>
         <script src="index.js"></script>
     </div>
 
