--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="scroll-top-container"></div>
 
         <!-- <script src="bubbles.js"></script> -->
-        <script src="bubbles_temp.js"></script>
+        <script src="bubbles.js"></script>
         <script src="index.js"></script>
     </div>
 
