--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <div class="login-placeholder">
                     <div class="login-container">
                         <i class="gg-user"></i>
-                        Inloggen
+                        Log In
                     </div>
-                    <a class='link' href="www.youtube.com">Nieuw account maken</a>
+                    <a class='link' href="www.youtube.com" style="text-align:center">Or Sign Up</a>
                 </div>
                 <ul class="nav-container">
                     <li>Our Goal</li>
