Patch index.html

--- a/index.html
+++ b/index.html
@@ -26,16 +26,10 @@
                     <a class='link' href="www.youtube.com" style="text-align:center">Or Sign Up</a>
                 </div>
                 <ul class="nav-container">
-<<<<<<< HEAD
-                    <li>Our Goal</li>
-                    <li id="nav_events">Upcoming Events</li>
-                    <li id="nav_content">Community</li>
-=======
                     <li id="nav_content">Events</li>
                     <li>Research</li>
-                    <a href="https://webtech-ki44.webtech-uva.nl/~kieferp/Webtech-2/login/" style="text-decoration:none;"> <li>Login</li></a>
+                    <a id='nav_events'href="https://webtech-ki44.webtech-uva.nl/~kieferp/Webtech-2/login/" style="text-decoration:none;"> <li>Login</li></a>
                         
->>>>>>> 838444e (login en register gelinkt)
                 </ul>
             </div>
         </div>
