--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Life Below Water</title>
     <link rel="stylesheet" href="./styles.css">
-    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -27,9 +34,11 @@
                 </div>
                 <ul class="nav-container">
                     <li id="nav_content">Events</li>
-                    <li>Research</li>
-                    <a id='nav_events'href="https://webtech-ki44.webtech-uva.nl/~kieferp/Webtech-2/login/" style="text-decoration:none;"> <li>Login</li></a>
-                        
+                    <li id="nav_targets">Research</li>
+                    <a id='nav_events'>
+                        <li>Login</li>
+                    </a>
+
                 </ul>
             </div>
         </div>
@@ -76,7 +85,14 @@
                     </div>
                 </div>
             </div>
-            <div id="events"></div>
+            <div id="targets">
+                <h2>The Targets</h2>
+                <div class="tile-container">
+                    <div class="tile"></div>
+                    <div class="tile"></div>
+                    <div class="tile"></div>
+                </div>
+            </div>
         </div>
 
 
