--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
             <div id="targets">
                 <h2>The Targets</h2>
                 <div class="tile-container">
-                    <div class="tile"></div>
+                    <div class="tile">
+                        <div class="tile-overlap"></div>
+                    </div>
                     <div class="tile"></div>
                     <div class="tile"></div>
                 </div>
@@ -101,6 +103,7 @@
         <!-- <script src="bubbles.js"></script> -->
         <script src="bubbles.js"></script>
         <script src="index.js"></script>
+        <script src="elastisch_effect_test.js"></script>
     </div>
     >
 
