login en registeerknop fix

--- a/index.html
+++ b/index.html
@@ -28,15 +28,14 @@
                 <div class="login-placeholder">
                     <div class="login-container">
                         <i class="gg-user"></i>
-                        Log In
+                        <a href="login" style="text-decoration:none";>Log In</a>
                     </div>
-                    <a class='link' href="www.youtube.com" style="text-align:center">Or Sign Up</a>
+                    <a class='link' href="registration" style="text-align:center">Or Sign Up</a>
                 </div>
                 <ul class="nav-container">
                     <li id="nav_content">Events</li>
                     <li id="nav_targets">Research</li>
                     <a id='nav_events'>
-                        <li>Login</li>
                     </a>
 
                 </ul>
