--- a/index.html
+++ b/index.html
@@ -87,11 +87,12 @@
             <div id="targets">
                 <h2>The Targets</h2>
                 <div class="tile-container">
-                    <div class="tile">
+                    <!-- <div class="tile">
                         <div class="tile-overlap"></div>
                     </div>
                     <div class="tile"></div>
-                    <div class="tile"></div>
+                    <div class="tile"></div> -->
+                    <canvas id="canvas"></canvas>
                 </div>
             </div>
         </div>
