--- a/add_event/add_event_form.html
+++ b/add_event/add_event_form.html
@@ -8,16 +8,16 @@ Add event
 <body>
 <h1>Add event</h1>
 
-<form action="add_event.php" method="post">
+<form action="add_event.php" method="POST">
 
 <div class="new_event_info">Event name <input name="name" type="text"></div>
 <div class="new_event_info">Date <input name="date" type="date"></div>
 <div class="new_event_info">Description <input name="description" type="text"> </div>
-<div class="new_event_info">Event URL <input name="URL" type="url"> </div>
+<div class="new_event_info">Event URL <input name="url" type="url"> </div>
 
 <label for="location">Location</label> 
 <select name="location" id="location">
-    <option value="australia">Africa</option>
+    <option value="africa">Africa</option>
     <option value="antarctica">Antarctica</option>
     <option value="asia">Asia</option>
     <option value="europe">Europe</option>
@@ -26,7 +26,7 @@ Add event
     <option value="south america">South America</option>
 </select> 
 <br>
-<input type="submit" value="Submit">
+<input type="submit" name="add_new_event" value="Submit">
 
 </form>
 </body>
