--- a/add_event/add_event_form.html
+++ b/add_event/add_event_form.html
@@ -13,7 +13,7 @@ Add event
 <div class="new_event_info">Event name <input name="name" type="text"></div>
 <div class="new_event_info">Date <input name="date" type="date"></div>
 <div class="new_event_info">Description <input name="description" type="text"> </div>
-<div class="new_event_info">Event URL <input name="url" type="url"> </div>
+<div class="new_event_info">Event URL <input name="url" type="url" placeholder="start url with http or https"> </div>
 
 <label for="location">Location</label> 
 <select name="location" id="location">
