delete from favorite option basis

--- a/add_to_favorites/add_favorites.html
+++ b/add_to_favorites/add_favorites.html
@@ -22,7 +22,14 @@
     <div class="new_event_info">EventID <input name="eventid" type="int"></div>
     <div class="new_event_info">UserID <input name="userid" type="int"></div>
     <input type="submit" name='add_to_favorite' value="Submit">
-    
+
+    </form>
+
+    <form action="add_favorite.php" method="POST">
+
+    <div class="new_event_info">EventID <input name="eventid" type="int"></div>
+    <div class="new_event_info">UserID <input name="userid" type="int"></div>
+    <input type="submit" name='remove_from_favorite' value="Delete">
 
     </form>
       
