--- a/add_event/add_event_form.html
+++ b/add_event/add_event_form.html
@@ -16,32 +16,32 @@ Add event
 <div class="new_event_info">Event URL <input name="url" type="url" placeholder="Start url with http or https"> </div> <br>
 
 <div class="new_event_info">Location(s) <br> 
-    <input name="africa" type="checkbox" value="1">
+    <input name="africa" type="checkbox" value="africa">
     <label for="africa">Africa</label>
-    <input name="antarctica" type="checkbox" value="1">
+    <input name="antarctica" type="checkbox" value="antarctica">
     <label for="antarctica">Antarctica</label>
-    <input name="asia" type="checkbox" value="1">
+    <input name="asia" type="checkbox" value="asia">
     <label for="asia">Asia</label>
-    <input name="europe" type="checkbox" value="1">
+    <input name="europe" type="checkbox" value="europe">
     <label for="europe">Europe</label>
-    <input name="north america" type="checkbox" value="1">
-    <label for="north america">North America</label>
-    <input name="oceania" type="checkbox" value="1">
+    <input name="north_america" type="checkbox" value="north_america">
+    <label for="north_america">North America</label>
+    <input name="oceania" type="checkbox" value="ocenia">
     <label for="oceania">Oceania</label>
-    <input name="south america" type="checkbox" value="1">
-    <label for="south america">South America</label>
+    <input name="south_america" type="checkbox" value="south_america">
+    <label for="south_america">South America</label>
 </div>
 <br>    
 <div class="new_event_info">Subjects <br> 
-    <input name="pollution" type="checkbox" value="1">
+    <input name="pollution" type="checkbox" value="pollution">
     <label for="pollution">Pollution</label>
-    <input name="acidification" type="checkbox" value="1">
+    <input name="acidification" type="checkbox" value="acidification">
     <label for="acidification">Acidification</label>
-    <input name="rising temperatures" type="checkbox" value="1">
-    <label for="rising temperatures">Rising temperatures</label>
-    <input name="eutrophication" type="checkbox" value="1">
+    <input name="rising_temperatures" type="checkbox" value="rising_temperatures">
+    <label for="rising_temperatures">Rising temperatures</label>
+    <input name="eutrophication" type="checkbox" value="eutrophication">
     <label for="eutrophication">Eutrophication</label>
-    <input name="overfishing" type="checkbox" value="1">
+    <input name="overfishing" type="checkbox" value="overfishing">
     <label for="overfishing">Overfishing</label>
 </div>
 
