--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
                 <ul class="nav-container">
                     <li id="nav_content">Events</li>
                     <li id="nav_targets">Research</li>
-                    <a id='nav_events'>
-                    </a>
-
+                    <l1 id='nav_events'>
+                        </li>
                 </ul>
             </div>
         </div>
@@ -86,11 +85,23 @@
                 </div>
             </div>
             <div class="pop-up-container" id="popup">
-                <button class="close-button" onclick="togglePopup()">
-                    <span class="cross-line" style="transform: rotate(-45deg);""></span>
-                    <span class=" cross-line" style="transform: rotate(45deg);"></span>
-                </button>
                 <div id="map"></div>
+                <div class="text-container">
+                    <h3>Robert Jay Band</h3>
+                    <p>
+                        Op dit album vind je naast de live versie van de nieuwe single “Freedom” ondermeer, “Red
+                        Bullet”, “Raining in the Snow”, “Penthouse in Heaven” en nog veel meer mooie nummers.
+                    </p>
+                </div>
+                <div class="button-container">
+                    <button class="close-button" onclick="togglePopup()">
+                        <span class="cross-line" style="transform: rotate(-45deg);""></span>
+                        <span class=" cross-line" style="transform: rotate(45deg);"></span>
+                    </button>
+                    <button class="sign-up-button">
+                        Sign up!
+                    </button>
+                </div>
             </div>
             <div id="targets">
                 <h2>The Targets</h2>
