signup knop fixen

--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
                 <h1>Life Below Water</h1>
                 <h2>Conserve and sustainably use the oceans, seas and marine resources for sustainable development.</h2>
             </div>
-            <div id="bubble-layer"></div>
-            <!-- <div class="login-placeholder">
-                <div class="login-container">
-                    <i class="gg-user"></i>
-                    <a href="login" style="text-decoration:none; color:black" ;>Log In</a>
+            <div class="nav-placeholder">
+                <div class="login-placeholder">
+                    <div class="login-container">
+                        <i class="gg-user"></i>
+                        <a href="login" style="text-decoration:none" ;>Log In</a>
+                    </div>
+                    <a class='link' href="login/registration.php" style="text-align:center">Or Sign Up</a>
                 </div>
                 <a class='link' href="registration" style="text-align:center">Or Sign Up</a>
             </div> -->
